Avoid horizontal scroll
Helpful for mobile and has problems with the background image

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,8 @@
   padding-top: 5rem; /* Add space for fixed header */
   line-height: 1.5;
   position: relative;
+  /* Prevents horizontal scroll. Helpful for background and mobile. */
+  overflow-x: hidden;
 }
 
 html {
